calc/acalc_folder/y.output
Terminals unused in grammar

   UMINUS


Grammar

    0 $accept: Start $end

    1 Start: StmtList

    2 StmtList: Stmt
    3         | StmtList Stmt

    4 Stmt: ID '=' Expr
    5     | Expr

    6 Expr: Expr '+' Expr
    7     | Expr '*' Expr
    8     | Expr '/' Expr
    9     | Expr '-' Expr
   10     | NUM
   11     | ID


Terminals, with rules where they appear

$end (0) 0
'*' (42) 7
'+' (43) 6
'-' (45) 9
'/' (47) 8
'=' (61) 4
error (256)
NUM (258) 10
ID (259) 4 11
UMINUS (260)


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
Start (12)
    on left: 1, on right: 0
StmtList (13)
    on left: 2 3, on right: 1 3
Stmt (14)
    on left: 4 5, on right: 2 3
Expr (15)
    on left: 6 7 8 9 10 11, on right: 4 5 6 7 8 9


State 0

    0 $accept: . Start $end

    NUM  shift, and go to state 1
    ID   shift, and go to state 2

    Start     go to state 3
    StmtList  go to state 4
    Stmt      go to state 5
    Expr      go to state 6


State 1

   10 Expr: NUM .

    $default  reduce using rule 10 (Expr)


State 2

    4 Stmt: ID . '=' Expr
   11 Expr: ID .

    '='  shift, and go to state 7

    $default  reduce using rule 11 (Expr)


State 3

    0 $accept: Start . $end

    $end  shift, and go to state 8


State 4

    1 Start: StmtList .
    3 StmtList: StmtList . Stmt

    NUM  shift, and go to state 1
    ID   shift, and go to state 2

    $default  reduce using rule 1 (Start)

    Stmt  go to state 9
    Expr  go to state 6


State 5

    2 StmtList: Stmt .

    $default  reduce using rule 2 (StmtList)


State 6

    5 Stmt: Expr .
    6 Expr: Expr . '+' Expr
    7     | Expr . '*' Expr
    8     | Expr . '/' Expr
    9     | Expr . '-' Expr

    '+'  shift, and go to state 10
    '-'  shift, and go to state 11
    '*'  shift, and go to state 12
    '/'  shift, and go to state 13

    $default  reduce using rule 5 (Stmt)


State 7

    4 Stmt: ID '=' . Expr

    NUM  shift, and go to state 1
    ID   shift, and go to state 14

    Expr  go to state 15


State 8

    0 $accept: Start $end .

    $default  accept


State 9

    3 StmtList: StmtList Stmt .

    $default  reduce using rule 3 (StmtList)


State 10

    6 Expr: Expr '+' . Expr

    NUM  shift, and go to state 1
    ID   shift, and go to state 14

    Expr  go to state 16


State 11

    9 Expr: Expr '-' . Expr

    NUM  shift, and go to state 1
    ID   shift, and go to state 14

    Expr  go to state 17


State 12

    7 Expr: Expr '*' . Expr

    NUM  shift, and go to state 1
    ID   shift, and go to state 14

    Expr  go to state 18


State 13

    8 Expr: Expr '/' . Expr

    NUM  shift, and go to state 1
    ID   shift, and go to state 14

    Expr  go to state 19


State 14

   11 Expr: ID .

    $default  reduce using rule 11 (Expr)


State 15

    4 Stmt: ID '=' Expr .
    6 Expr: Expr . '+' Expr
    7     | Expr . '*' Expr
    8     | Expr . '/' Expr
    9     | Expr . '-' Expr

    '+'  shift, and go to state 10
    '-'  shift, and go to state 11
    '*'  shift, and go to state 12
    '/'  shift, and go to state 13

    $default  reduce using rule 4 (Stmt)


State 16

    6 Expr: Expr . '+' Expr
    6     | Expr '+' Expr .
    7     | Expr . '*' Expr
    8     | Expr . '/' Expr
    9     | Expr . '-' Expr

    '*'  shift, and go to state 12
    '/'  shift, and go to state 13

    $default  reduce using rule 6 (Expr)


State 17

    6 Expr: Expr . '+' Expr
    7     | Expr . '*' Expr
    8     | Expr . '/' Expr
    9     | Expr . '-' Expr
    9     | Expr '-' Expr .

    '*'  shift, and go to state 12
    '/'  shift, and go to state 13

    $default  reduce using rule 9 (Expr)


State 18

    6 Expr: Expr . '+' Expr
    7     | Expr . '*' Expr
    7     | Expr '*' Expr .
    8     | Expr . '/' Expr
    9     | Expr . '-' Expr

    $default  reduce using rule 7 (Expr)


State 19

    6 Expr: Expr . '+' Expr
    7     | Expr . '*' Expr
    8     | Expr . '/' Expr
    8     | Expr '/' Expr .
    9     | Expr . '-' Expr

    $default  reduce using rule 8 (Expr)
